Справлена быша подпримѣси :обратка, :ли_пущь, :во_сл и :сравнена примѣси примѣша

--- a/TODO
+++ b/TODO
@@ -229,7 +229,8 @@ składowa - component, element
 ==? živel - element
   = živel - element
   = żywioł - element, environment
+  = повратак vrn návrat возврат връщане повернення вяртанне powrót !повратъ! = return
+  = istinski истински праўда истинный pravdivý prawdziwy праўда правда істина pravda вярно !вѣрно! = true
 
-
-
-
+  ꙇо = ё
+  ꙇи = ї
